force-app/main/default/objects/User_Tracking__c/User_Tracking__c.object-meta.xml
<CustomObject>
    <label>User Tracking</label>
    <nameField>
        <displayFormat>UT-{0000}</displayFormat>
        <label>User Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Tracking</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>