force-app/main/default/objects/User_Tracking__c/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <formula>FLOOR( Call_Time_in_Sec__c  /60) + MOD(Call_Time_in_Sec__c ,60)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration (in Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>