force-app/main/default/objects/User_Tracking__c/fields/Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Time__c</fullName>
    <formula>If( ISNULL( Checkin_Detatime__c ),&quot;&quot;, LEFT(RIGHT(text( Checkin_Detatime__c + 330/1440),9),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Time</label>
    <type>Text</type>
</CustomField>