force-app/main/default/objects/User_Tracking__c/fields/Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Date__c</fullName>
    <formula>DATEVALUE(  Checkout_Datetime__c + 30/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkout Date</label>
    <type>Date</type>
</CustomField>