force-app/main/default/objects/User_Tracking__c/fields/CheckOut_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Time__c</fullName>
    <formula>If( ISNULL( Checkout_Datetime__c ),&quot;&quot;, LEFT(RIGHT(text( Checkout_Datetime__c + 330/1440),9),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckOut Time</label>
    <type>Text</type>
</CustomField>