force-app/main/default/objects/User_Tracking__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(floor((Checkout_Datetime__c -  Checkin_Detatime__c)*24)) + (((((Checkout_Datetime__c -  Checkin_Detatime__c)*24)-floor((Checkout_Datetime__c -  Checkin_Detatime__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>