force-app/main/default/objects/User_Tracking__c/fields/Idle_Time__c.field-meta.xml
<CustomField>
    <fullName>Idle_Time__c</fullName>
    <formula>Logged_In_Duration__c  -  Call_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idle Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>