force-app/main/default/objects/User_Tracking__c/fields/Is_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Present__c</fullName>
    <formula>If( ISNULL(Check_in_Date__c ) ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Present</label>
    <type>Checkbox</type>
</CustomField>