force-app/main/default/objects/User_Tracking__c/fields/Logged_In_Duration__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_Duration__c</fullName>
    <formula>VALUE(TEXT(VALUE(LEFT(TEXT( Duration__c ) , FIND(&apos;.&apos;, TEXT(Duration__c )) ))))*60 + VALUE(TEXT(VALUE(RIGHT(TEXT(Duration__c ), FIND(&apos;.&apos;, TEXT(Duration__c )) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>