force-app/main/default/objects/User_Tracking__c/fields/SM__c.field-meta.xml
<CustomField>
    <fullName>SM__c</fullName>
    <formula>Member__r.Manager.FirstName+&apos; &apos;+Member__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM</label>
    <type>Text</type>
</CustomField>