force-app/main/default/objects/User_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>SM__c</columns>
    <columns>Checkin_Detatime__c</columns>
    <columns>Checkout_Datetime__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Checkout_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>